add_subdirectory(avro)
add_subdirectory(boost)
add_subdirectory(cpp-httplib)
add_subdirectory(cxxopts)
add_subdirectory(fmt)
add_subdirectory(grpc)
add_subdirectory(json)
add_subdirectory(libpg_query)
add_subdirectory(lz4)
add_subdirectory(snappy)
add_subdirectory(xxhash)
add_subdirectory(zlib-ng)

# Tests.
if(BUILD_TESTS)
    add_subdirectory(gtest)
    add_subdirectory(benchmark)
endif()
